traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:18: error: not found: value a
    for ( b <- 0 to 6-a){
                      ^